# openGL_learning

./: CMakeLists.txt
libs/GLEW/: INSTALL_RECEIPT.json
res/shaders/: Basic.shader
src/: App.cpp
